# cellular-automaton

./: CMakeLists.txt  LICENSE  constants.h  field.cpp  fieldview.cpp  fieldview.h  main.cpp  mainwindow.cpp  mainwindow.h
include/: field.h
src/: field.cpp  fieldview.cpp  mainwindow.cpp
